src/main/java/com/example/loginserver/Errors/LoginError.java
package com.example.loginserver.Errors;

public enum LoginError {
    GOOD,
    ELSE_ERROR,
    NOT_FOUND,
    MISSING_INPUTS
}
